# SDIO_RP2350

./: CMakeLists.txt  library.json
include/: sdio_rp2350.h  sdio_rp2350_config_example.h
src/: sdfat_sdcard_rp2350.cpp  sdio_rp2350.cpp
